<resources>
    <string name="app_name" translatable="false">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="sharring">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="personal_agreement">Пользовательское соглашение</string>
    <string name="button_back">Кнопка назад</string>
    <string name="url_android_class" translatable="false">https://practicum.yandex.ru/profile/android-developer/?from=profile_subscriptions-with-prof-recommendations</string>
    <string name="share_message">Отправить через:</string>
    <string name="my_email" translatable="false">svetictv@mail.ru</string>
    <string name="mail_theme">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="mail_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="url_personal_agreement" translatable="false">https://yandex.ru/legal/practicum_offer/ru/</string>
    <string name="mail_not_found">Приложения почты не найдено</string>
    <string name="search_text">Поиск</string>
    <string name="clear_button">Кнопка очистки</string>
    <string name="search_problem">Проблемы со связью\n\nЗагрузка не удалась. Проверьте\nподключение к интернету</string>
    <string name="not_found">Ничего не нашлось</string>
    <string name="refresh">Обновить</string>
    <string name="search_history">Вы искали</string>
    <string name="clean_search_history">Очистить историю</string>
    <string name="track_duration">Длительность</string>
    <string name="track_album">Альбом</string>
    <string name="track_year">Год</string>
    <string name="track_genre">Жанр</string>
    <string name="track_country">Страна</string>
    <string name="default_time" translatable="false">00:00</string>
    <string name="media_Keeping">Медиатека</string>
    <string name="empty_media_tracks">Ваша медиатека пуста</string>
    <string name="empty_media_playlists">Вы не создали\n ни одного плейлиста</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlist">Плейлисты</string>
    <string name="create_new_playlist">Новый плейлист</string>
    

    <string name="trackName1" translatable="false">Smells Like Teen Spirit</string>
    <string name="artictName1" translatable="false">Nirvana</string>
    <string name="trackTime1" translatable="false">5:01</string>
    <string name="artworkUrl1" translatable="false">https://is5-ssl.mzstatic.com/image/thumb/Music115/v4/7b/58/c2/7b58c21a-2b51-2bb2-e59a-9bb9b96ad8c3/00602567924166.rgb.jpg/100x100bb.jpg</string>

    <string name="trackName2" translatable="false">Billie Jean</string>
    <string name="artictName2" translatable="false">Michael Jackson</string>
    <string name="trackTime2" translatable="false">4:35</string>
    <string name="artworkUrl2" translatable="false">https://is5-ssl.mzstatic.com/image/thumb/Music125/v4/3d/9d/38/3d9d3811-71f0-3a0e-1ada-3004e56ff852/827969428726.jpg/100x100bb.jpg</string>

    <string name="trackName3" translatable="false">Stayin\' Alive</string>
    <string name="artictName3" translatable="false">Bee Gees</string>
    <string name="trackTime3" translatable="false">4:10</string>
    <string name="artworkUrl3" translatable="false">https://is4-ssl.mzstatic.com/image/thumb/Music115/v4/1f/80/1f/1f801fc1-8c0f-ea3e-d3e5-387c6619619e/16UMGIM86640.rgb.jpg/100x100bb.jpg</string>

    <string name="trackName4" translatable="false">Whole Lotta Love</string>
    <string name="artictName4" translatable="false">Led Zeppelin</string>
    <string name="trackTime4" translatable="false">5:33</string>
    <string name="artworkUrl4" translatable="false">https://is2-ssl.mzstatic.com/image/thumb/Music62/v4/7e/17/e3/7e17e33f-2efa-2a36-e916-7f808576cf6b/mzm.fyigqcbs.jpg/100x100bb.jpg</string>

    <string name="trackName5" translatable="false">Sweet Child O\'Mine</string>
    <string name="artictName5" translatable="false">Guns N\' Roses</string>
    <string name="trackTime5" translatable="false">5:03</string>
    <string name="artworkUrl5" translatable="false">https://is5-ssl.mzstatic.com/image/thumb/Music125/v4/a0/4d/c4/a04dc484-03cc-02aa-fa82-5334fcb4bc16/18UMGIM24878.rgb.jpg/100x100bb.jpg</string>



</resources>