<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/distance_sexteen">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/text_twenty_two"
            android:fontFamily="@font/ys_display_medium"/>
    </FrameLayout>


    <Button
        android:id="@+id/search_sign"
        style="@style/mainButtonStyle"
        android:layout_marginTop="24dp"
        app:icon="@drawable/ic_search_sign_24"
        android:text="@string/search"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        >
    </Button>
    <Button
        android:id="@+id/media"
        style="@style/mainButtonStyle"
        android:layout_marginTop="@dimen/distance_sexteen"
        app:icon="@drawable/ic_media_24"
        android:text="@string/media"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        />
    <Button
        android:id="@+id/settings"
        style="@style/mainButtonStyle"
        app:icon="@drawable/ic_settings_24"
        android:text="@string/settings"
        android:layout_marginTop="@dimen/distance_sexteen"
        android:layout_marginBottom="@dimen/distance_twelve"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        />

</LinearLayout>