<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            app:icon="@drawable/ic_back_arrow_24"
            app:iconTint="@color/black"
            android:paddingHorizontal="12dp"
            style="?android:attr/borderlessButtonStyle"
            android:contentDescription="@string/button_back"
            android:id="@+id/button_arrow"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textColor="@color/black"
            android:textSize="@dimen/text_twenty_two"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/ysdisplay"/>
    </LinearLayout>

    <FrameLayout
        android:layout_marginTop="24dp"
        android:layout_width="match_parent"
        android:layout_height="61dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:paddingStart="@dimen/distance_sexteen"
            android:text="@string/dark_theme"
            android:textColor="@color/black"
            android:textSize="@dimen/text_sexteen"
            android:fontFamily="@font/ysdisplay"/>

        <Switch
            android:id="@+id/simpleSwitch"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical|end"
            android:checked="true"
            android:paddingEnd="6dp"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="61dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:paddingStart="@dimen/distance_sexteen"
            android:text="@string/sharring"
            android:textColor="@color/black"
            android:textSize="@dimen/text_sexteen"
            android:fontFamily="@font/ysdisplay"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_sharing_24"
            android:layout_gravity="center_vertical|end"
            android:paddingEnd="@dimen/distance_twelve"
            android:contentDescription="@string/sharring"
            />

    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="61dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:paddingStart="@dimen/distance_sexteen"
            android:text="@string/support"
            android:textColor="@color/black"
            android:textSize="@dimen/text_sexteen"
            android:fontFamily="@font/ysdisplay"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_support_24"
            android:layout_gravity="center_vertical|end"
            android:paddingEnd="@dimen/distance_twelve"
            android:contentDescription="@string/support"
            />

    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="61dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:paddingStart="@dimen/distance_sexteen"
            android:text="@string/personal_agreement"
            android:textColor="@color/black"
            android:textSize="@dimen/text_sexteen"
            android:fontFamily="@font/ysdisplay"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_right_24"
            android:layout_gravity="center_vertical|end"
            android:paddingEnd="@dimen/distance_twelve"
            android:contentDescription="@string/personal_agreement"
            />

    </FrameLayout>

</LinearLayout>