<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search_activity"
    android:background="?attr/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            style="@style/buttonBack"
            app:icon="@drawable/ic_back_arrow_24"
            android:contentDescription="@string/button_back"
            android:id="@+id/button_arrow"
            />

        <TextView
            style="@style/startTextUpOnPage"
            android:text="@string/search_text" />
    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/search_edit_text"
            style="@style/searchBox"
            android:drawableStart="@drawable/ic_search_16"
            android:hint="@string/search_text"
            android:inputType="text"
            android:lines="1"
            android:maxLength="60"
            android:paddingStart="@dimen/distance_sixteen"
            android:paddingEnd="40dp"
            android:imeOptions="actionDone"
            android:singleLine="true">

            <requestFocus />

            </EditText>

        <ImageButton
            android:id="@+id/clear_icon"
            style="@style/icon_clear"
            android:contentDescription="@string/clear_button"
            android:src="@drawable/ic_clear_button_16"
            android:visibility="gone"/>

    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/recyclerViewTrack"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/distance_sixteen"
    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

    <LinearLayout
        android:id="@+id/placeholder_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:visibility="gone">
        
        <ImageView
            android:id="@+id/placeholder_image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            />
        
        <TextView
            android:id="@+id/placeholder_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/distance_sixteen"
            style="@style/placeboText"
            android:layout_gravity="center"
            android:paddingHorizontal="24dp"
            android:gravity="center"
            android:lineSpacingExtra="4dp"
            />
        
        <Button
            android:id="@+id/refresh_button"
            style="@style/refreshButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="91dp"
            android:minHeight="36dp"
            android:text="@string/refresh"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/search_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/search_history_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/distance_sixteen"
            android:paddingEnd="@dimen/distance_sixteen"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="@dimen/distance_twelve"
            style="@style/placeboText"
            android:text="@string/search_history"
            android:gravity="center"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerHistoryViewTrack"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/distance_eight"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

        <Button
            android:id="@+id/search_history_button"
            style="@style/refreshButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="148dp"
            android:minHeight="36dp"
            android:text="@string/clean_search_history"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            />

    </LinearLayout>

</LinearLayout>